# agent-verse

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
agents/analytics-agent/: .env.example  Dockerfile  README.md  check_local_mysql.py  pyproject.toml  verify_data.py
agents/analytics-agent/app/: main.py
agents/analytics-agent/app/api/: router.py
agents/analytics-agent/app/config/: constants.py  settings.py
agents/analytics-agent/app/domains/: README.md
agents/analytics-agent/app/events/: producer.py  topics.py
agents/analytics-agent/app/integrations/: api_cache.py  duckdb_client.py  prometheus_client.py
agents/analytics-agent/app/knowledge/: indexer.py
agents/analytics-agent/app/langgraph/: graph_builder.py
agents/analytics-agent/app/memory/: memory_service.py
agents/analytics-agent/app/workflows/: README.md
agents/analytics-agent/tests/unit/: test_google_ads_analytics.py  test_google_ads_cache.py  test_monitoring_alerting_llm.py  test_monitoring_alerting_subscription.py  test_monitoring_alerting_worker.py  test_rc_health_calculator.py
agents/quality-agent/: .env.example  Dockerfile  README.md  pyproject.toml
agents/quality-agent/alembic/: env.py
agents/quality-agent/app/: main.py
agents/quality-agent/app/api/: router.py
agents/quality-agent/app/config/: constants.py  settings.py
agents/quality-agent/app/core/: runtime.py
agents/quality-agent/app/domains/: README.md
agents/quality-agent/app/events/: producer.py
agents/quality-agent/app/knowledge/: collections.py
agents/quality-agent/app/observability/: logging.py
agents/quality-agent/app/repositories/: task_repository.py
agents/quality-agent/app/workflows/: README.md
agents/quality-agent/tests/unit/: test_placeholder.py
agents/security-agent/: .env.example  Dockerfile  README.md  pyproject.toml
agents/security-agent/app/: main.py
agents/security-agent/app/config/: constants.py  settings.py
agents/security-agent/app/core/: agent.py  workflow_manager.py
agents/security-agent/app/domains/: README.md
agents/security-agent/app/events/: consumer.py
agents/security-agent/app/knowledge/: retriever.py
agents/security-agent/app/repositories/: audit_repository.py
(+383 files in other folders)
