[project]
name = "quality-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "qdrant-client>=1.10.0",
  "clickhouse-connect>=0.7.0",
  "aiokafka>=0.10.0",
  "langgraph>=0.2.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0"
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
