[tool.poetry]
name = "security-agent"
version = "0.1.0"
description = "FastAPI AI Agent for Security Agent"
authors = ["AI Agent Platform Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
langgraph = "^0.0.60"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
alembic = "^1.13.1"
aiokafka = "^0.10.0"
redis = "^5.0.6"
qdrant-client = "^1.9.1"
clickhouse-connect = "^0.7.15"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"